--- a/package.json
+++ b/package.json
@@ -11,6 +11,7 @@
     },
     "devDependencies": {
         "@alpinejs/intersect": "^3.4.2",
+        "@popperjs/core": "^2.11.2",
         "@tailwindcss/forms": "^0.2.1",
         "@tailwindcss/line-clamp": "^0.2.2",
         "@tiptap/core": "^2.0.0-beta.138",
@@ -22,7 +23,6 @@
         "lodash": "^4.17.19",
         "postcss": "^8.2.1",
         "postcss-import": "^14.0.2",
-        "sweetalert": "^2.1.2",
         "tailwindcss": "^2.0.2",
         "vue-loader": "^17.0.0",
         "vue-template-compiler": "^2.6.14"
@@ -38,6 +38,7 @@
         "@tiptap/extension-typography": "^2.0.0-beta.19",
         "@tiptap/vue-3": "^2.0.0-beta.80",
         "quill": "^1.3.6",
-        "quill-better-table": "^1.2.10"
+        "quill-better-table": "^1.2.10",
+        "sweetalert": "^2.1.2"
     }
 }
