--- a/composer.json
+++ b/composer.json
@@ -13,6 +13,7 @@
         "laravel/sanctum": "^2.11",
         "laravel/tinker": "^2.5",
         "livewire/livewire": "^2.6",
+        "phpoffice/phpspreadsheet": "^1.22",
         "spatie/laravel-permission": "^5.3"
     },
     "require-dev": {
